<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.xenoamess</groupId>
    <artifactId>untar</artifactId>
    <version>1.0-SNAPSHOT</version>

    <properties>
        <maven.compiler.source>17</maven.compiler.source>
        <maven.compiler.target>17</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <quarkus.platform.version>3.6.4</quarkus.platform.version>
        <quarkus.platform.artifact-id>quarkus-bom</quarkus.platform.artifact-id>
        <quarkus.platform.group-id>io.quarkus.platform</quarkus.platform.group-id>
        <jvm.args>
            --add-opens=java.base/java.lang=ALL-UNNAMED,\
            --add-opens=java.base/java.lang.invoke=ALL-UNNAMED
        </jvm.args>
        <quarkus.native.additional-build-args>
            -H:+RemoveUnusedSymbols,\
            -march=compatibility,\
            --add-opens=java.base/java.lang=ALL-UNNAMED,\
            --add-opens=java.base/java.lang.invoke=ALL-UNNAMED
        </quarkus.native.additional-build-args>
        <quarkus.native.container-build>false</quarkus.native.container-build>
        <quarkus.native.compression.level>10</quarkus.native.compression.level>
        <quarkus.native.compression.additional-args>--ultra-brute,-v</quarkus.native.compression.additional-args>
    </properties>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>${quarkus.platform.group-id}</groupId>
                <artifactId>${quarkus.platform.artifact-id}</artifactId>
                <version>${quarkus.platform.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <dependencies>
        <dependency>
            <groupId>io.quarkus</groupId>
            <artifactId>quarkus-arc</artifactId>
        </dependency>
        <dependency>
            <groupId>io.quarkus</groupId>
            <artifactId>quarkus-picocli</artifactId>
        </dependency>
        <dependency>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-compress</artifactId>
            <version>1.25.0</version>
        </dependency>
        <dependency>
            <groupId>org.tukaani</groupId>
            <artifactId>xz</artifactId>
            <version>1.9</version>
        </dependency>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter</artifactId>
            <version>5.10.1</version>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>io.quarkus.platform</groupId>
                <artifactId>quarkus-maven-plugin</artifactId>
                <version>${quarkus.platform.version}</version>
                <extensions>true</extensions>
                <executions>
                    <execution>
                        <goals>
                            <goal>build</goal>
                            <goal>generate-code</goal>
                            <goal>generate-code-tests</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.11.0</version>
                <configuration>
                    <source>17</source>
                    <target>17</target>
                </configuration>
            </plugin>
        </plugins>
    </build>
    <profiles>
        <profile>
            <id>native</id>
            <activation>
                <property>
                    <name>native</name>
                </property>
            </activation>
            <properties>
                <skipITs>false</skipITs>
                <quarkus.native.enabled>true</quarkus.native.enabled>
                <quarkus.native.auto-reachability-metadata>true</quarkus.native.auto-reachability-metadata>
            </properties>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.graalvm.buildtools</groupId>
                        <artifactId>native-maven-plugin</artifactId>
                        <version>0.11.3</version>
                        <extensions>true</extensions>
                        <executions>
                            <execution>
                                <id>generate-metadata</id>
                                <goals>
                                    <goal>merge-agent-files</goal>
                                    <goal>metadata-copy</goal>
                                </goals>
                                <phase>post-integration-test</phase>
                                <configuration>
                                    <metadataCopy>
                                        <enabled>true</enabled>
                                        <outputDirectory>${project.basedir}/src/main/resources/META-INF/native-image
                                        </outputDirectory>
                                    </metadataCopy>
                                </configuration>
                            </execution>
                        </executions>
                        <configuration>
                            <agent>
                                <enabled>true</enabled>
                            </agent>
                        </configuration>
                    </plugin>
                </plugins>
            </build>
        </profile>
    </profiles>
</project>